# cudacc

./: LICENSE  README.md  TESTING_README.md  pyproject.toml  run_tests.sh  setup_cuda.sh
cudacc/: __init__.py  accelerator.py  dispatcher.py  memory.py  registry.py
cudacc/bridges/: __init__.py  numpy_bridge.py  scipy_bridge.py  uproot_bridge.py
cudacc/kernels/: __init__.py  physics.py  reductions.py  transforms.py
cudacc/utils/: __init__.py  device.py  profiler.py
docs/: architecture.md  index.md  installation.md  quickstart.md
docs/api/: README.md
examples/fluid_dynamics/: fenics_demo.py
examples/particle_physics/: basic_acceleration.py  uproot_demo.py
tests/: conftest.py  test_accelerator.py  test_dispatcher.py  test_memory.py
tests/bridges/: test_numpy_bridge.py  test_scipy_bridge.py  test_uproot_bridge.py
tests/kernels/: test_physics.py  test_reductions.py  test_transforms.py
