[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cudacc"
version = "0.1.0"
description = "Package wrapper for cuda acceleration"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
    {name = "Rado Razakamiandra", email = "radofana@gmail.com"}
]

dependencies = [
    "numba>=0.58",
    "cupy-cuda12x",
    "rmm-cu12",
    "numpy",
    "pytest",
]

[project.optional-dependencies]
hep = ["uproot", "awkward"]
fluid = ["fenics"]
dev = ["pytest", "pytest-benchmark"]
